--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "sass": "^1.43.2",
+    "sass-loader": "^10.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.3.1",
+    "autoprefixer": "^10.4.13"
+
   }
 }
