--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
+    "aos": "^2.3.4",
     "sass": "^1.43.2",
-    "sass-loader": "^10.4.1"
+    "sass-loader": "^10.4.1",
+    "vue": "^3.3.4",
+    "vue-scrollto": "^2.20.0",
+    "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "vite": "^4.0.0",
+    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.3.1",
-    "autoprefixer": "^10.4.13"
-
+    "vite": "^4.0.0"
   }
 }
